--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
+:root {
+  --background-color: #8ecae6;
+  --button: #ffb703;
+  --text: #023047;
+  --grid: #219ebc;
+}
+
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Space Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
